# esp32-ble-keyboard

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: ble.rs  constants.rs  keyboard.rs  keycode.rs  lib.rs
