[package]
name = "esp32-ble-keyboard"
version = "0.1.0"
authors = ["Alberto López Sánchez <albertoxp1@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false , features = ["binstart", "alloc_handler"] }
esp-idf-hal = { version = "0.41", optional = true, default-features = false, features = ["critical-section", "edge-executor", "embassy-sync"] }
esp-idf-svc = { version = "0.46", optional = true, default-features = false, features = ["alloc", "embassy-time-driver", "embassy-time-isr-queue"] }
embedded-svc = { version = "0.25", optional = true, default-features = false }
esp32-nimble = "0.1.1"

[build-dependencies]
embuild = "0.31.2"
